--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           <div class="NAV">
             <button class="button"><div class="text-wrapper-7">+7(913)466-33-22</div></button>
             <button class="button"><div class="text-wrapper-8">info@astra.ru</div></button>
-            <img class="LOGO" src="LOGO.png" />
+            <img class="LOGO" src="img/LOGO.png" />
             <button class="button"><div class="text-wrapper-9">Google play</div></button>
             <button class="button"><div class="text-wrapper-10">App Store</div></button>
           </div>
